[package]
name = "pgdbfs"
version = "0.1.0"
authors = ["riazmd"]

[dependencies]
#fuse = "0.3.1"
fuse = "0.3"
libc = "0.2.36"
rand = "0.4"
lazy_static = "1.0"
r2d2 = "0.8"
r2d2_postgres = "0.18.0"

#time = "0.1.38"
#postgres = { version = "0.19", features = ["with-chrono-0_4"] }
#postgres = { version = "0.15", features = ["with-time"] }

time = "0.1.39"
chrono = "0.4.19"

#tokio-postgres = { version="0.5.1", features=["with-chrono-0_4"] }

[dependencies.postgres]
version = "0.19"
features = ["with-chrono-0_4"]