[package]
name = "pgdbfs"
version = "0.1.0"
authors = ["jrz1977"]

[dependencies]
#fuse = "0.3.1"
fuse = "0.3"
libc = "0.2.36"
rand = "0.4"
lazy_static = "1.0"
r2d2 = "0.8"
r2d2_postgres = "0.18.0"
log = "0.4.0"
env_logger = "0.8.2"

time = "0.1.39"
chrono = "0.4.19"
ctrlc = "3.1.7"
confy = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
dirs = "3.0.1"
clap = "2.33.3"

[dependencies.postgres]
version = "0.19"
features = ["with-chrono-0_4"]
